--- a/public/view_solution.html
+++ b/public/view_solution.html
@@ -16,7 +16,7 @@
     }
 
     .dot {
-      stroke: #FFF;
+      stroke: #000;
     }
 
     .empty_dot{
@@ -121,7 +121,7 @@
       .attr("r", 2.0)
       .attr("cx", function(d) { return x(d.field_0); })
       .attr("cy", function(d) { return y(d.field_1); })
-      .style("opacity", 0.3)
+      .style("opacity", 0.15)
       .style("fill", "gray");
 
       var lineFunction = d3.svg.line()
@@ -132,7 +132,7 @@
       var lineGraph = svg.append("path")
                      .attr("d", lineFunction(data))
                      .attr("stroke", "gray")
-                     .attr("opacity", 0.2)
+                     .attr("opacity", 0.15)
                      .attr("stroke-width", 1)
                      .attr("fill", "none");
 
@@ -143,13 +143,15 @@ if (getQueryVariable("seq") != undefined){
   plot_query = "&seq=" + getQueryVariable("seq")
 }
 
-d3.tsv("/plot?vertex=" + getQueryVariable("vertex") + plot_query, function(error, data) {
+d3.json("/tag", function(error, data) {
   if (error) throw error;
 
 
   data.forEach(function(d) {
-    d.field_0 = +d.field_0;
-    d.field_1 = +d.field_1;
+    d.field_0 = +d[0][0];
+    d.field_1 = +d[0][1];
+    d.field_n_x = +d[1]["0"]
+    d.field_n_y = +d[1]["1"]
   });
 
       //x.domain(d3.extent(data, function(d) { return d.field_0; })).nice();
@@ -162,10 +164,19 @@ d3.tsv("/plot?vertex=" + getQueryVariable("vertex") + plot_query, function(error
       .data(data)
       .enter().append("circle")
       .attr("class", "dot")
-      .attr("r", 3.5)
+      .attr("r", 1.5)
       .attr("cx", function(d) { return x(d.field_0); })
       .attr("cy", function(d) { return y(d.field_1); })
-      .style("fill", function(d) { return color(d.field_vertex); });
+      .style("fill", function(d) { return "#687894" });
+
+      svg.selectAll(".dot_n")
+      .data(data)
+      .enter().append("circle")
+      .attr("class", "dot_n")
+      .attr("r", 3.5)
+      .attr("cx", function(d) { return x(d.field_n_x); })
+      .attr("cy", function(d) { return y(d.field_n_y); })
+      .style("fill", function(d) { return color(d[1].vertex + " " + d[1].tag); });
 
       var legend = svg.selectAll(".legend")
       .data(color.domain())
